--- a/TurboFix/TurboFix.vcxproj.filters
+++ b/TurboFix/TurboFix.vcxproj.filters
@@ -20,7 +20,6 @@
     <ClCompile Include="TurboFix.cpp" />
     <ClCompile Include="ScriptSettings.cpp" />
     <ClCompile Include="Config.cpp" />
-    <ClCompile Include="ScriptMenu.cpp" />
     <ClCompile Include="Util\String.cpp">
       <Filter>Util</Filter>
     </ClCompile>
@@ -49,6 +48,7 @@
       <Filter>Util</Filter>
     </ClCompile>
     <ClCompile Include="TurboScript.cpp" />
+    <ClCompile Include="TurboFixMenu.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Util">
