--- a/TurboFix/TurboFix.vcxproj.filters
+++ b/TurboFix/TurboFix.vcxproj.filters
@@ -52,6 +52,7 @@
     <ClCompile Include="Memory\Patches.cpp">
       <Filter>Memory\Patching</Filter>
     </ClCompile>
+    <ClCompile Include="ScriptMenuUtils.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Util">
@@ -140,5 +141,6 @@
     <ClInclude Include="Memory\Patches.h">
       <Filter>Memory\Patching</Filter>
     </ClInclude>
+    <ClInclude Include="ScriptMenuUtils.h" />
   </ItemGroup>
 </Project>
