--- a/TurboFix/TurboFix.vcxproj
+++ b/TurboFix/TurboFix.vcxproj
@@ -99,7 +99,7 @@
     <ClCompile Include="TurboFixMenu.cpp" />
     <ClCompile Include="TurboScript.cpp" />
     <ClCompile Include="ScriptSettings.cpp" />
-    <ClCompile Include="TurboFix.cpp" />
+    <ClCompile Include="Script.cpp" />
     <ClCompile Include="Util\FileVersion.cpp" />
     <ClCompile Include="Util\Logger.cpp" />
     <ClCompile Include="Util\Paths.cpp" />
@@ -123,10 +123,11 @@
     <ClInclude Include="Memory\VehicleExtensions.hpp" />
     <ClInclude Include="Memory\Versions.hpp" />
     <ClInclude Include="ScriptMenuUtils.h" />
+    <ClInclude Include="TurboFix.h" />
     <ClInclude Include="TurboScript.hpp" />
     <ClInclude Include="ScriptMenu.hpp" />
     <ClInclude Include="ScriptSettings.hpp" />
-    <ClInclude Include="TurboFix.hpp" />
+    <ClInclude Include="Script.hpp" />
     <ClInclude Include="Util\FileVersion.hpp" />
     <ClInclude Include="Util\Game.hpp" />
     <ClInclude Include="Util\Logger.hpp" />
