--- a/TurboFix/TurboFix.vcxproj.filters
+++ b/TurboFix/TurboFix.vcxproj.filters
@@ -17,7 +17,6 @@
     <ClCompile Include="Util\Paths.cpp">
       <Filter>Util</Filter>
     </ClCompile>
-    <ClCompile Include="TurboFix.cpp" />
     <ClCompile Include="ScriptSettings.cpp" />
     <ClCompile Include="Config.cpp" />
     <ClCompile Include="Util\String.cpp">
@@ -53,6 +52,7 @@
       <Filter>Memory\Patching</Filter>
     </ClCompile>
     <ClCompile Include="ScriptMenuUtils.cpp" />
+    <ClCompile Include="Script.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Filter Include="Util">
@@ -72,6 +72,9 @@
     </Filter>
     <Filter Include="Memory\Patching">
       <UniqueIdentifier>{aa06a1f4-2ac0-49ea-b796-487746e91bd7}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="API">
+      <UniqueIdentifier>{5d6efb77-0315-4d3e-bb60-374fc9448c67}</UniqueIdentifier>
     </Filter>
   </ItemGroup>
   <ItemGroup>
@@ -97,7 +100,6 @@
     <ClInclude Include="Util\Paths.hpp">
       <Filter>Util</Filter>
     </ClInclude>
-    <ClInclude Include="TurboFix.hpp" />
     <ClInclude Include="ScriptSettings.hpp" />
     <ClInclude Include="Config.hpp" />
     <ClInclude Include="Util\Math.hpp">
@@ -142,5 +144,9 @@
       <Filter>Memory\Patching</Filter>
     </ClInclude>
     <ClInclude Include="ScriptMenuUtils.h" />
+    <ClInclude Include="TurboFix.h">
+      <Filter>API</Filter>
+    </ClInclude>
+    <ClInclude Include="Script.hpp" />
   </ItemGroup>
 </Project>
