--- a/TurboFix/TurboFix.vcxproj
+++ b/TurboFix/TurboFix.vcxproj
@@ -105,6 +105,7 @@
     <ClCompile Include="TurboScript.cpp" />
     <ClCompile Include="ScriptSettings.cpp" />
     <ClCompile Include="Script.cpp" />
+    <ClCompile Include="TurboScriptNPC.cpp" />
     <ClCompile Include="Util\FileVersion.cpp" />
     <ClCompile Include="Util\Logger.cpp" />
     <ClCompile Include="Util\Paths.cpp" />
@@ -135,6 +136,7 @@
     <ClInclude Include="ScriptMenu.hpp" />
     <ClInclude Include="ScriptSettings.hpp" />
     <ClInclude Include="Script.hpp" />
+    <ClInclude Include="TurboScriptNPC.hpp" />
     <ClInclude Include="Util\FileVersion.hpp" />
     <ClInclude Include="Util\Game.hpp" />
     <ClInclude Include="Util\Logger.hpp" />
